Version 0.3.2~dev

	* Add workflow label on workflow instance page.

Version 0.3.1 Released on 2011/07/26

	* Remove forgotten line in urls.py.

Version 0.3.0 Released on 2011/07/13

	* Provide RESTful API.
	* Complete rewrite of javascript code.

Version 0.2.0 Released on 2011/06/01

	* Release under the LGPL 2.1.
	* Add README.
	* Major overhaul of the database model, extensive use of BackBone.js.

Version 0.1.0 Released on 2011/05/06

	* Initial release.
	* Add webengine-team py files in appteam directory.